--- a/page2.html
+++ b/page2.html
@@ -21,9 +21,7 @@
             1. 每位参赛者只有一次的作答机会。</text></svg>
     </br>
     <svg width="2000" height="100"><text x="100" y="80" font-size="60" font-family="Ma Shan Zheng">
-            2. 一旦点击“开始”的按钮，每位参赛者的答题耐时</br></text></svg>
-    <svg width="2000" height="70"><text x="145" y="50" font-size="60"
-            font-family="Ma Shan Zheng">和答题分数，将会被系统自动开始计算。</text></svg>
+            2. 此网站配备有24题</br></text></svg>
     </br>
     <svg width="2000" height="100"><text x="100" y="80" font-size="60" font-family="Ma Shan Zheng">
             3. 主办方之后会公平性地派发奖品予参赛者。</text></svg>
