--- a/page52.html
+++ b/page52.html
@@ -40,6 +40,8 @@
     </a>
     </button>
   </div>
+  <h1>你的最终得分：</h1>
+  <p id="result"></p>
 </body>
-
+<script src="script.js"></script>
 </html>
