--- a/page5.html
+++ b/page5.html
@@ -55,26 +55,30 @@
         src="https://imgur.com/2Q4cyv8.png">
     <div style="margin-bottom: 50px;"> </div>
     <svg width="1000" height="200">
-        <text x="500" y="100" font-size="56" fill="black" font-weight="bold" font-family="Ma Shan Zheng" 
+        <text x="500" y="50" font-size="53" fill="black" font-weight="bold" font-family="Ma Shan Zheng"
             text-anchor="middle" stroke="black" stroke-width="1">
-            坤成大礼堂是在那一年开始竣工？
+            在翟兆巽校长时代，
+        </text>
+        <text x="500" y="120" font-size="53" fill="black" font-weight="bold" font-family="Ma Shan Zheng"
+            text-anchor="middle" stroke="black" stroke-width="1">
+            坤成学校的校服颜色经历了怎样的变化？
         </text>
     </svg>
 
     <a href="#" id="option1" onclick="goToTempPage2(event, 'page6.html')">
-        <span>A. 1980年</span>
+        <span>A. 从白衫蓝裙改为白衫黑裙</span>
     </a>
 
     <a href="#" id="option2" onclick="goToTempPage(event, 'page6.html')">
-        <span>B. 1990年</span>
+        <span>B. 从白衫黑裙改为白衫蓝裙</span>
     </a>
 
     <a href="#" id="option3" onclick="goToTempPage2(event, 'page6.html')">
-        <span>C. 1989年</span>
+        <span>C. 改为全白校服</span>
     </a>
 
     <a href="#" id="option4" onclick="goToTempPage2(event, 'page6.html')">
-        <span>D. 2000年</span>
+        <span>D. 增加校服种类</span>
     </a>
 </body>
 
