--- a/page7.html
+++ b/page7.html
@@ -55,26 +55,30 @@
         src="https://imgur.com/IKZdoiD.png">
     <div style="margin-bottom: 50px;"> </div>
     <svg width="1000" height="200">
-        <text x="500" y="100" font-size="56" fill="black" font-weight="bold" font-family="Ma Shan Zheng"
+        <text x="500" y="50" font-size="53" fill="black" font-weight="bold" font-family="Ma Shan Zheng"
             text-anchor="middle" stroke="black" stroke-width="1">
-            哪一项是坤成中学的旧址?
+            1982年，
+        </text>
+        <text x="500" y="120" font-size="53" fill="black" font-weight="bold" font-family="Ma Shan Zheng"
+            text-anchor="middle" stroke="black" stroke-width="1">
+            翟兆巽校长在学校内设立了哪种新设施？
         </text>
     </svg>
 
     <a href="#" id="option1" onclick="goToTempPage2(event, 'page8.html')">
-        <span>A. Jalan Syed Putra</span>
+        <span>A. 体育馆</span>
     </a>
 
     <a href="#" id="option2" onclick="goToTempPage(event, 'page8.html')">
-        <span>B. 13, Jalan Kampung Attap</span>
+        <span>B. 电脑中心</span>
     </a>
 
     <a href="#" id="option3" onclick="goToTempPage2(event, 'page8.html')">
-        <span>C. 15, Jalan Kampung Attap</span>
+        <span>C. 视听教育室</span>
     </a>
 
     <a href="#" id="option4" onclick="goToTempPage2(event, 'page8.html')">
-        <span>D. 12, Jalan Kampung Attap</span>
+        <span>D. 学生食堂</span>
     </a>
 </body>
 
