--- a/page13.html
+++ b/page13.html
@@ -55,26 +55,30 @@
         src="https://imgur.com/C8xwHos.png">
     <div style="margin-bottom: 50px;"> </div>
     <svg width="1000" height="200">
-        <text x="500" y="100" font-size="56" fill="black" font-weight="bold" font-family="Ma Shan Zheng"
+        <text x="500" y="50" font-size="56" fill="black" font-weight="bold" font-family="Ma Shan Zheng"
             text-anchor="middle" stroke="black" stroke-width="1">
-            坤成学校创办的主要目标是：
+            1988年，为庆祝80周年校庆，
+        </text>
+        <text x="500" y="120" font-size="56" fill="black" font-weight="bold" font-family="Ma Shan Zheng"
+            text-anchor="middle" stroke="black" stroke-width="1">
+            坤成学校举办了什么活动？
         </text>
     </svg>
 
     <a href="#" id="option1" onclick="goToTempPage2(event, 'page14.html')">
-        <span>A. 提供男子教育</span>
+        <span>A. 校史展览</span>
     </a>
 
     <a href="#" id="option2" onclick="goToTempPage(event, 'page14.html')">
-        <span>B. 提供女子教育</span>
+        <span>B. 越野赛跑</span>
     </a>
 
     <a href="#" id="option3" onclick="goToTempPage2(event, 'page14.html')">
-        <span>C. 提高英文教育水平</span>
+        <span>C. 文化表演</span>
     </a>
 
     <a href="#" id="option4" onclick="goToTempPage2(event, 'page14.html')">
-        <span>D. 专注于职业技术培训</span>
+        <span>D. 校友聚会</span>
     </a>
 </body>
 
