--- a/page27.html
+++ b/page27.html
@@ -55,26 +55,30 @@
         src="https://imgur.com/CPZFJdR.png">
     <div style="margin-bottom: 50px;"> </div>
     <svg width="1000" height="200">
-        <text x="500" y="100" font-size="56" fill="black" font-weight="bold" font-family="Ma Shan Zheng"
+        <text x="500" y="50" font-size="56" fill="black" font-weight="bold" font-family="Ma Shan Zheng"
             text-anchor="middle" stroke="black" stroke-width="1">
-            坤成学校科学馆于哪一年全面竣工？
+            1974年，坤成学校为小学筹款扩建校舍，
+        </text>
+        <text x="500" y="120" font-size="56" fill="black" font-weight="bold" font-family="Ma Shan Zheng"
+            text-anchor="middle" stroke="black" stroke-width="1">
+            筹款活动的主要形式是：
         </text>
     </svg>
 
     <a href="#" id="option1" onclick="goToTempPage2(event, 'page28.html')">
-        <span>A. 1978年</span>
+        <span>A. 办演唱会</span>
     </a>
 
     <a href="#" id="option2" onclick="goToTempPage2(event, 'page28.html')">
-        <span>B. 1979年</span>
+        <span>B. 向热心人士劝捐</span>
     </a>
 
     <a href="#" id="option3" onclick="goToTempPage2(event, 'page28.html')">
-        <span>C. 1980年</span>
+        <span>C. 出版纪念刊</span>
     </a>
 
     <a href="#" id="option4" onclick="goToTempPage(event, 'page28.html')">
-        <span>D. 1981年</span>
+        <span>D. 举办义卖会</span>
     </a>
 </body>
 
