--- a/page31.html
+++ b/page31.html
@@ -55,26 +55,30 @@
         src="https://imgur.com/gNH5oKi.png">
     <div style="margin-bottom: 50px;"> </div>
     <svg width="1000" height="200">
-        <text x="500" y="100" font-size="56" fill="black" font-weight="bold" font-family="Ma Shan Zheng"
+        <text x="500" y="50" font-size="54" fill="black" font-weight="bold" font-family="Ma Shan Zheng"
             text-anchor="middle" stroke="black" stroke-width="1">
-            坤成学校图书馆扩建后分为哪三大室？
+            1969年，坤成学校讨论兴建一座双层楼宇，
+        </text>
+        <text x="500" y="120" font-size="54" fill="black" font-weight="bold" font-family="Ma Shan Zheng"
+            text-anchor="middle" stroke="black" stroke-width="1">
+            其用途是：
         </text>
     </svg>
 
-    <a href="#" id="option1" onclick="goToTempPage(event, 'page32.html')">
-        <span>A. 藏书馆、阅览室、资料参考室</span>
+    <a href="#" id="option1" onclick="goToTempPage2(event, 'page32.html')">
+        <span>A. 教师宿舍和行政办公室</span>
     </a>
 
-    <a href="#" id="option2" onclick="goToTempPage2(event, 'page32.html')">
-        <span>B. 藏书馆、会议室、多媒体室</span>
+    <a href="#" id="option2" onclick="goToTempPage(event, 'page32.html')">
+        <span>B. 礼堂和图书馆</span>
     </a>
 
     <a href="#" id="option3" onclick="goToTempPage2(event, 'page32.html')">
-        <span>C. 资料室、研究室、档案馆</span>
+        <span>C. 实验室和课室</span>
     </a>
 
     <a href="#" id="option4" onclick="goToTempPage2(event, 'page32.html')">
-        <span>D. 借书处、阅览室、休息室</span>
+        <span>D. 体育馆和音乐厅</span>
     </a>
 </body>
 
