--- a/page11.html
+++ b/page11.html
@@ -57,7 +57,7 @@
     <svg width="1000" height="200">
         <text x="500" y="100" font-size="55" fill="black" font-weight="bold" font-family="Ma Shan Zheng"
             text-anchor="middle" stroke="black" stroke-width="1">
-            以下哪位校长在1952年担任坤成学校校长？
+            以下哪位校长于1952年担任坤成学校校长？
         </text>
     </svg>
 
