--- a/page15.html
+++ b/page15.html
@@ -57,7 +57,7 @@
     <svg width="1000" height="200">
         <text x="500" y="100" font-size="56" fill="black" font-weight="bold" font-family="Ma Shan Zheng"
             text-anchor="middle" stroke="black" stroke-width="1">
-            坤成学校最早建立在哪一年？
+            坤成学校最早建立于哪一年？
         </text>
     </svg>
 
