--- a/page19.html
+++ b/page19.html
@@ -55,13 +55,9 @@
         src="https://imgur.com/jMhtfFu.png">
     <div style="margin-bottom: 50px;"> </div>
     <svg width="1000" height="200">
-        <text x="500" y="50" font-size="56" fill="black" font-weight="bold" font-family="Ma Shan Zheng"
+        <text x="500" y="100" font-size="56" fill="black" font-weight="bold" font-family="Ma Shan Zheng"
             text-anchor="middle" stroke="black" stroke-width="1">
-            坤成学校于1979年进行的
-        </text>
-        <text x="500" y="120" font-size="56" fill="black" font-weight="bold" font-family="Ma Shan Zheng"
-            text-anchor="middle" stroke="black" stroke-width="1">
-            校门前改建是因为什么原因？
+            坤成学校于1979年进行的校门前改建的原因是？
         </text>
     </svg>
 
