--- a/page2.html
+++ b/page2.html
@@ -21,10 +21,10 @@
             1. 每位参赛者只有一次的作答机会。</text></svg>
     </br>
     <svg width="2000" height="100"><text x="100" y="80" font-size="60" font-family="Ma Shan Zheng">
-            2. 此网站配备有24题</br></text></svg>
+            2. 此网站配备有15题，所有题目均需作答。</br></text></svg>
     </br>
     <svg width="2000" height="100"><text x="100" y="80" font-size="60" font-family="Ma Shan Zheng">
-            3. 主办方之后会公平性地派发奖品予参赛者。</text></svg>
+            3. 主办方会根据答对的题数公平性地派发奖品予参赛者。</text></svg>
 
     <div style="margin-bottom: 5px;"> </div>
     <div style="text-align: center;">
