--- a/page52.html
+++ b/page52.html
@@ -32,16 +32,10 @@
 
 
   <div style="margin-bottom: 10px;"> </div>
-  <div style="text-align: right;">
-    <a href="page2.html" <button class="image-button">
-      <img
-        src="https://cdn.discordapp.com/attachments/1019517628873715733/1335807448245862440/image.png?ex=67a18321&is=67a031a1&hm=1e0f264be901179461624a389694af5afd8e0a1b25f4daf249306f3f37640602&"
-        style="margin-right: 25px;" width="225" height="100">
-    </a>
-    </button>
-  </div>
-  <h1>你的最终得分：</h1>
-  <p id="result"></p>
+
+  <svg width="1000" height="150"><text x="100" y="100" font-size="60" font-family="Ma Shan Zheng" stroke="black"
+      stroke-width="2">你的最终得分：</text><p id="result"></p></svg>
+
 </body>
 <script src="script.js"></script>
 </html>
