--- a/page52.html
+++ b/page52.html
@@ -34,7 +34,7 @@
   <div style="margin-bottom: 10px;"> </div>
 
   <svg width="1000" height="200"><text x="100" y="100" font-size="60" font-family="Ma Shan Zheng" stroke="black"
-      stroke-width="2">您的最终得分：</text><p id="result"></p></svg>
+      stroke-width="2">您的最终得分：</text><!--p id="result"></p--></svg>
 
 </body>
 <script src="script.js"></script>
