--- a/page52.html
+++ b/page52.html
@@ -37,8 +37,8 @@
 
     <svg width="1000" height="200">
         <text x="100" y="100" font-size="60" font-family="Ma Shan Zheng" stroke="black" stroke-width="2">
-            您的最终得分：
-        </text><h2 id="scoreDisplay">0</h2>
+            您的最终得分：<h2 id="scoreDisplay">0</h2>
+        </text>
     </svg>
 
 </body>
