--- a/page7.html
+++ b/page7.html
@@ -69,16 +69,16 @@
         <span>A. 体育馆</span>
     </a>
 
-    <a href="#" id="option2" onclick="goToTempPage(event, 'page8.html')">
-        <span>B. 电脑中心</span>
+    <a href="#" id="option2" onclick="goToTempPage2(event, 'page8.html')">
+        <span>B. 学生食堂</span>
     </a>
 
     <a href="#" id="option3" onclick="goToTempPage2(event, 'page8.html')">
         <span>C. 视听教育室</span>
     </a>
 
-    <a href="#" id="option4" onclick="goToTempPage2(event, 'page8.html')">
-        <span>D. 学生食堂</span>
+    <a href="#" id="option4" onclick="goToTempPage(event, 'page8.html')">
+        <span>D. 电脑中心</span>
     </a>
 </body>
 
