--- a/page11.html
+++ b/page11.html
@@ -61,16 +61,16 @@
         </text>
     </svg>
 
-    <a href="#" id="option1" onclick="goToTempPage(event, 'page12.html')">
-        <span>A. 翟兆巽</span>
+    <a href="#" id="option1" onclick="goToTempPage2(event, 'page12.html')">
+        <span>A. 张弼士</span>
     </a>
 
     <a href="#" id="option2" onclick="goToTempPage2(event, 'page12.html')">
         <span>B. 林宝权</span>
     </a>
 
-    <a href="#" id="option3" onclick="goToTempPage2(event, 'page12.html')">
-        <span>C. 张弼士</span>
+    <a href="#" id="option3" onclick="goToTempPage(event, 'page12.html')">
+        <span>C. 翟兆巽</span>
     </a>
 
     <a href="#" id="option4" onclick="goToTempPage2(event, 'page12.html')">
