--- a/page13.html
+++ b/page13.html
@@ -69,16 +69,16 @@
         <span>A. 校史展览</span>
     </a>
 
-    <a href="#" id="option2" onclick="goToTempPage(event, 'page14.html')">
-        <span>B. 越野赛跑</span>
+    <a href="#" id="option2" onclick="goToTempPage2(event, 'page14.html')">
+        <span>B. 校友聚会</span>
     </a>
 
     <a href="#" id="option3" onclick="goToTempPage2(event, 'page14.html')">
         <span>C. 文化表演</span>
     </a>
 
-    <a href="#" id="option4" onclick="goToTempPage2(event, 'page14.html')">
-        <span>D. 校友聚会</span>
+    <a href="#" id="option4" onclick="goToTempPage(event, 'page14.html')">
+        <span>D. 越野赛跑</span>
     </a>
 </body>
 
