--- a/page19.html
+++ b/page19.html
@@ -65,12 +65,12 @@
         <span>A. 校门设计不符合安全标准</span>
     </a>
 
-    <a href="#" id="option2" onclick="goToTempPage(event, 'page20.html')">
-        <span>B. 工程局扩建马路</span>
+    <a href="#" id="option2" onclick="goToTempPage2(event, 'page20.html')">
+        <span>B. 学生人数增加</span>
     </a>
 
-    <a href="#" id="option3" onclick="goToTempPage2(event, 'page20.html')">
-        <span>C. 学生人数增加</span>
+    <a href="#" id="option3" onclick="goToTempPage(event, 'page20.html')">
+        <span>C. 工程局扩建马路</span>
     </a>
 
     <a href="#" id="option4" onclick="goToTempPage2(event, 'page20.html')">
