--- a/page21.html
+++ b/page21.html
@@ -73,12 +73,12 @@
         <span>B. 为科学实验室筹款</span>
     </a>
 
-    <a href="#" id="option3" onclick="goToTempPage(event, 'page22.html')">
-        <span>C. 筹建大礼堂和小学食堂</span>
+    <a href="#" id="option3" onclick="goToTempPage2(event, 'page22.html')">
+        <span>C. 纪念学校创办80周年</span>
     </a>
 
-    <a href="#" id="option4" onclick="goToTempPage2(event, 'page22.html')">
-        <span>D. 纪念学校创办80周年</span>
+    <a href="#" id="option4" onclick="goToTempPage(event, 'page22.html')">
+        <span>D. 筹建大礼堂和小学食堂</span>
     </a>
 </body>
 
