--- a/page25.html
+++ b/page25.html
@@ -65,12 +65,12 @@
         <span>A. 引进计算机课程</span>
     </a>
 
-    <a href="#" id="option2" onclick="goToTempPage2(event, 'page26.html')">
-        <span>B. 增设高级教育文凭班</span>
+    <a href="#" id="option2" onclick="goToTempPage(event, 'page26.html')">
+        <span>B. 制定学校行政大纲和学生奖惩规条</span>
     </a>
 
-    <a href="#" id="option3" onclick="goToTempPage(event, 'page26.html')">
-        <span>C. 制定学校行政大纲和学生奖惩规条</span>
+    <a href="#" id="option3" onclick="goToTempPage2(event, 'page26.html')">
+        <span>C. 增设高级教育文凭班</span>
     </a>
 
     <a href="#" id="option4" onclick="goToTempPage2(event, 'page26.html')">
