--- a/page27.html
+++ b/page27.html
@@ -69,12 +69,12 @@
         <span>A. 办演唱会</span>
     </a>
 
-    <a href="#" id="option2" onclick="goToTempPage(event, 'page28.html')">
-        <span>B. 向热心人士劝捐</span>
+    <a href="#" id="option2" onclick="goToTempPage2(event, 'page28.html')">
+        <span>B. 出版纪念刊</span>
     </a>
 
-    <a href="#" id="option3" onclick="goToTempPage2(event, 'page28.html')">
-        <span>C. 出版纪念刊</span>
+    <a href="#" id="option3" onclick="goToTempPage(event, 'page28.html')">
+        <span>C. 向热心人士劝捐</span>
     </a>
 
     <a href="#" id="option4" onclick="goToTempPage2(event, 'page28.html')">
