--- a/page29.html
+++ b/page29.html
@@ -65,12 +65,12 @@
         </text>
     </svg>
 
-    <a href="#" id="option1" onclick="goToTempPage2(event, 'page30.html')">
-        <span>A. 数学</span>
+    <a href="#" id="option1" onclick="goToTempPage(event, 'page30.html')">
+        <span>A. 英语文学</span>
     </a>
 
-    <a href="#" id="option2" onclick="goToTempPage(event, 'page30.html')">
-        <span>B. 英语文学</span>
+    <a href="#" id="option2" onclick="goToTempPage2(event, 'page30.html')">
+        <span>B. 数学</span>
     </a>
 
     <a href="#" id="option3" onclick="goToTempPage2(event, 'page30.html')">
