--- a/page31.html
+++ b/page31.html
@@ -69,16 +69,16 @@
         <span>A. 教师宿舍和行政办公室</span>
     </a>
 
-    <a href="#" id="option2" onclick="goToTempPage(event, 'page32.html')">
-        <span>B. 礼堂和图书馆</span>
+    <a href="#" id="option2" onclick="goToTempPage2(event, 'page32.html')">
+        <span>B. 体育馆和音乐厅</span>
     </a>
 
     <a href="#" id="option3" onclick="goToTempPage2(event, 'page32.html')">
         <span>C. 实验室和课室</span>
     </a>
 
-    <a href="#" id="option4" onclick="goToTempPage2(event, 'page32.html')">
-        <span>D. 体育馆和音乐厅</span>
+    <a href="#" id="option4" onclick="goToTempPage(event, 'page32.html')">
+        <span>D. 礼堂和图书馆</span>
     </a>
 </body>
 
